feat: market詳細&削除 (#97)
