# api/app/handler/market.go
@@ -3,10 +3,13 @@ package handler
 import (
 	dbRepo "api/app/infra/repository"
 	"api/app/oas"
+	"api/app/shared/ctxlogger"
 	"api/app/shared/lox"
 	"api/app/usecase"
 	"context"
 	"log/slog"
+
+	"github.com/google/uuid"
 )
 
 func (h *handler) MarketGet(ctx context.Context) ([]oas.Market, error) {
@@ -25,6 +28,8 @@ func (h *handler) MarketGet(ctx context.Context) ([]oas.Market, error) {
 }
 
 func (h *handler) MarketPost(ctx context.Context, req *oas.MarketPostReq) (*oas.Market, error) {
+	ctxlogger.WithValue(ctx, "req", req)
+
 	marketRepo := dbRepo.NewMarketRepository(h.db)
 	createMarketUsecase := usecase.NewCreateMarketUsecase(marketRepo)
 
@@ -39,4 +44,49 @@ func (h *handler) MarketPost(ctx context.Context, req *oas.MarketPostReq) (*oas.
 		Name:        market.Name,
 		Description: market.Description,
 	}, nil
+}
+
+func (h *handler) MarketMarketIdDelete(ctx context.Context, params oas.MarketMarketIdDeleteParams) error {
+	ctxlogger.WithValue(ctx, "params", params)
+
+	txRepo := dbRepo.NewTransactionRepository(h.db)
+	marketRepo := dbRepo.NewMarketRepository(h.db)
+	marketImageRepo := dbRepo.NewMarketImageRepository(h.db)
+	deleteMarketByIDUsecase := usecase.NewDeleteMarketByIDUsecase(txRepo, marketRepo, marketImageRepo)
+
+	marketID, err := uuid.Parse(params.MarketId)
+	if err != nil {
+		slog.ErrorContext(ctx, "Failed to parse market id", "error", err)
+		return err
+	}
+	err = deleteMarketByIDUsecase.Run(ctx, marketID)
+	if err != nil {
+		slog.ErrorContext(ctx, "Failed to delete market", "error", err)
+		return err
+	}
+	slog.InfoContext(ctx, "Delete market success")
+
+	return nil
+}
+
+func (h *handler) MarketMarketIdGet(ctx context.Context, params oas.MarketMarketIdGetParams) (*oas.Market, error) {
+	ctxlogger.WithValue(ctx, "params", params)
+
+	marketRepo := dbRepo.NewMarketRepository(h.db)
+	marketImageRepo := dbRepo.NewMarketImageRepository(h.db)
+	getMarketByIDUsecase := usecase.NewGetMarketByIDUsecase(marketRepo, marketImageRepo)
+
+	marketID, err := uuid.Parse(params.MarketId)
+	if err != nil {
+		slog.ErrorContext(ctx, "Failed to parse market id", "error", err)
+		return nil, err
+	}
+	oasMarket, err := getMarketByIDUsecase.Run(ctx, marketID)
+	if err != nil {
+		slog.ErrorContext(ctx, "Failed to get market", "error", err)
+		return nil, err
+	}
+	slog.InfoContext(ctx, "Get market success")
+
+	return oasMarket, nil
 }
